feat: support deleting forwards
